alinmapay/openshift-KDC/ms-core/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kdc-core
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      dnsConfig:
        searches:
        - me.alinma.internal
      containers:
      - name: core
        image: 'registry-kdc.alinma.internal/alinmapay-v2/ms-core:a635700'
        ports:
        - containerPort: 8090
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - response=$(curl -s http://localhost:8090/v2/alinmapay/core-management/actuator/health)
            - echo $response | grep -q '"readinessState":{"status":"UP"}'
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 10
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - response=$(curl -s http://localhost:8090/v2/alinmapay/core-management/actuator/health)
            - echo $response | grep -q '"livenessState":{"status":"UP"}'
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 15
        resources:
          requests:
            cpu: "250m"
            memory: "3Gi"
          limits:
            memory: "3Gi"
