alinmapay/openshift-KDC/ms-core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core
spec:
  selector:
    app: core
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8090
  type: ClusterIP
